feat: Complete security remediation and code quality improvements
Security Improvements:
- Add HEALTHCHECK to Dockerfile for proper Cloud Run monitoring
- Update deploy.sh to use environment variables with defaults
- Add validation for required configuration variables

Code Quality:
- Convert RTF files to proper Markdown format
- Add DASHBOARD_RISK_IMPROVEMENTS.md with phased enhancement plan
- Archive GEMINI_CODE_REVIEW.md with security review references
- Update .gitignore to prevent RTF files in repository

All critical security issues from Gemini code review now resolved.

🔒 Complete security remediation following best practices

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,9 @@ server/.env.bak
 # Files with embedded credentials
 netlify.toml
 
+# Rich Text Format files (prefer Markdown)
+*.rtf
+
 # Deployment files containing secrets
 # server/cloudbuild.yaml
 deploy-frontend.md
