chore: Complete major code renovation and stabilization
This commit introduces a wide range of improvements to enhance the stability, security, performance, and hygiene of the entire codebase.

### Backend & Testing
- **Add Server Test Suite:** Introduced Vitest to the backend, which previously had zero test coverage. Wrote initial integration tests for the Express app, achieving a passing state.
- **Recreate Auth Middleware:** The authentication middleware was discovered to be missing entirely. Recreated `auth.middleware.ts` to secure API endpoints with JWT verification.
- **Fix CORS Configuration:** Replaced the hardcoded CORS origin list with a configurable environment variable (`CORS_ORIGINS`) for flexibility and security.
- **Fix Broken Imports:** Corrected invalid import paths in all API route files.

### Security
- **Fix Critical Vulnerabilities:** Ran `npm audit fix` for both the server and root packages to resolve multiple vulnerabilities, including critical issues in `form-data` and `happy-dom`, and a moderate issue in `electron`.

### Frontend & Build Process
- **Fix Critical Build Flaw:** Re-enabled code-splitting in the Vite production build by removing the `inlineDynamicImports` workaround. This fixes a major performance bottleneck and results in dozens of small, cacheable JS chunks instead of one monolithic file.
- **Consolidate UI Components:** Standardized the app on the `sonner` toast library. Removed the redundant `shadcn/ui` Toaster, its hook, and all related calls.

### Code Hygiene & Organization
- **Enforce Linting:** Re-enabled the `@typescript-eslint/no-unused-vars` rule and fixed all resulting errors in the backend code and key frontend components.
- **Refactor NPM Scripts:** Overhauled the root `package.json` scripts for clarity and maintainability, grouping them into logical sections.
- **Organize Documentation:** Moved all project documentation (`.md` files) from the root into the `/docs` directory to clean up the project structure.

--- a/package.json
+++ b/package.json
@@ -8,19 +8,13 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "predev": "npx tsx scripts/check-deps.ts",
-    "prebuild": "npx tsx scripts/check-deps.ts",
-    "prelint": "npx tsx scripts/check-deps.ts",
-    "verify": "node scripts/verify-requirements.cjs",
     "dev": "node scripts/dev-with-port-check.cjs",
-    "dev:vite": "vite",
-    "build": "vite build",
+    "build": "npm run util:check-deps && vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
     "preview": "vite preview",
     "start": "vite preview --host 0.0.0.0 --port $PORT",
+    "lint": "eslint .",
     "typecheck": "tsc --noEmit",
-    "cache-bust": "echo 'Force re-build'",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
@@ -29,22 +23,18 @@
     "test:integration": "vitest run --config vitest.integration.config.ts",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:8081 && electron .\"",
     "electron:build": "npm run build && electron-builder",
-    "electron:build:win": "npm run build && electron-builder --win",
-    "electron:build:mac": "npm run build && electron-builder --mac",
-    "electron:build:linux": "npm run build && electron-builder --linux",
-    "dist": "npm run build && electron-builder --publish=never",
-    "dist:win": "npm run build && electron-builder --win --publish=never",
-    "release": "npm run build && electron-builder --publish=always",
-    "setup:electron": "npm install electron electron-builder electron-updater concurrently wait-on --save-dev && node scripts/create-icons.cjs",
-    "icons:create": "node scripts/create-icons.cjs",
-    "dev:any-port": "node scripts/find-port.cjs && npm run dev",
-    "dev:3000": "npm run dev -- --port 3000",
-    "dev:5173": "npm run dev -- --port 5173",
-    "dev:8080": "npm run dev -- --port 8080",
-    "diagnose": "node scripts/diagnose-port.cjs",
-    "fix-port": "node scripts/fix-oauth-port.cjs",
-    "migrate-legacy": "node scripts/migrate-legacy-data.js",
-    "setup-migration": "node scripts/setup-migration.js"
+    "electron:build:win": "npm run electron:build -- --win --publish=never",
+    "electron:build:mac": "npm run electron:build -- --mac --publish=never",
+    "electron:build:linux": "npm run electron:build -- --linux --publish=never",
+    "electron:release": "npm run electron:build -- --publish=always",
+    "util:verify-reqs": "node scripts/verify-requirements.cjs",
+    "util:check-deps": "npx tsx scripts/check-deps.ts",
+    "util:diagnose-port": "node scripts/diagnose-port.cjs",
+    "util:fix-oauth": "node scripts/fix-oauth-port.cjs",
+    "util:create-icons": "node scripts/create-icons.cjs",
+    "setup:electron": "npm install electron electron-builder electron-updater concurrently wait-on --save-dev && npm run util:create-icons",
+    "db:migrate-legacy": "node scripts/migrate-legacy-data.js",
+    "db:setup-migration": "node scripts/setup-migration.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -129,7 +119,7 @@
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
-    "electron": "^28.2.0",
+    "electron": "^38.2.2",
     "electron-builder": "^24.9.1",
     "electron-updater": "^6.1.8",
     "eslint": "^9.9.0",
@@ -137,7 +127,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.9.0",
-    "happy-dom": "^18.0.1",
+    "happy-dom": "^20.0.1",
     "jsdom": "^26.1.0",
     "msw": "^2.10.2",
     "open": "^10.1.0",
