--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "dev:simple": "node src/simple-server.js",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Tests coming soon\" && exit 0"
+    "test": "vitest run",
+    "test:ui": "vitest --ui"
   },
   "keywords": [
     "fortress",
@@ -35,9 +36,13 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
     "@types/pg": "^8.15.4",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
+    "@vitest/ui": "^3.2.4",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
